--- a/styles.styl
+++ b/styles.styl
@@ -277,6 +277,24 @@ input:-ms-input-placeholder
                     border none
                     padding 30px
 
+  .articulos
+                        list-style none
+                        padding 0
+                        margin 40px 0
+                        lost-center 700px
+                        li
+                            font-size 2em
+                            margin-bottom 8px
+                            input
+                                margin-right 10px
+                            &.checked
+                                color #CCC
+                            button
+                                padding 10px
+                                margin-left 40px
+                                line-height 0.5
+                                float right
+
 .panel-body
     .form-group
         lost-column 1/2
