--- a/styles.styl
+++ b/styles.styl
@@ -243,6 +243,7 @@ input:-ms-input-placeholder
     li
         font-size 2em
         margin-bottom 8px
+        trans()
         input
             margin-right 10px
         &.checked
@@ -254,11 +255,11 @@ input:-ms-input-placeholder
             float right
 
 .new-articulo
-      transition all 0.3s cubic-bezier(0.86, 0, 0.07, 1)
-      shadow-level(3)
-      &:hover
-          shadow-level(5)
-      label
+    transition all 0.3s cubic-bezier(0.86, 0, 0.07, 1)
+    shadow-level(3)
+    &:hover
+        shadow-level(5)
+    label
         background dark-purp
         text-transform uppercase
         font-weight 800
@@ -277,23 +278,23 @@ input:-ms-input-placeholder
         border none
         padding 30px
 
-  .articulos
-                        list-style none
-                        padding 0
-                        margin 40px 0
-                        lost-center 700px
-                        li
-                            font-size 2em
-                            margin-bottom 8px
-                            input
-                                margin-right 10px
-                            &.checked
-                                color #CCC
-                            button
-                                padding 10px
-                                margin-left 40px
-                                line-height 0.5
-                                float right
+.articulos
+    list-style none
+    padding 0
+    margin 40px 0
+    lost-center 700px
+    li
+        font-size 2em
+        margin-bottom 8px
+        input
+            margin-right 10px
+        &.checked
+            color #CCC
+        button
+            padding 10px
+            margin-left 40px
+            line-height 0.5
+            float right
 
 .panel-body
     .form-group
